--- a/react/package.json
+++ b/react/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "boostrap": "^2.0.0",
+    "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "reactstrap": "^9.1.5"
