--- a/react/package.json
+++ b/react/package.json
@@ -12,9 +12,12 @@
     "boostrap": "^2.0.0",
     "bootstrap": "^5.2.3",
     "emoji-picker-react": "^4.4.7",
+    "javascript-time-ago": "^2.5.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.7.0",
+    "react-time-ago": "^7.2.1",
+    "react-timeago": "^7.1.0",
     "reactstrap": "^9.1.5"
   },
   "devDependencies": {
