--- a/react/package.json
+++ b/react/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.2.3",
     "emoji-picker-react": "^4.4.7",
@@ -19,7 +20,8 @@
     "react-router-dom": "^6.7.0",
     "react-time-ago": "^7.2.1",
     "react-timeago": "^7.1.0",
-    "reactstrap": "^9.1.5"
+    "reactstrap": "^9.1.5",
+    "redux-toolkit": "^1.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
